# mncc

./: README.md  main.spec  pyproject.toml
src/mncc/: __init__.py  main.py
