[project]
name = "mncc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xawsolevo", email = "xawsolevo@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.2",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mncc"]
